// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Component of ALLMeals component renders correctly 1`] = `
<div
  id="allmeal"
>
  <Modal
    animationDuration={500}
    center={true}
    classNames={Object {}}
    classes={
      Object {
        "closeButton": "styles_closeButton__20ID4",
        "closeIcon": "styles_closeIcon__1QwbI",
        "modal": "styles_modal__gNwvD",
        "overlay": "styles_overlay__CLSq-",
        "overlayCenter": "styles_overlayCenter__YHoO7",
        "transitionEnter": "styles_transitionEnter__3j_-a",
        "transitionEnterActive": "styles_transitionEnterActive___eQs7",
        "transitionExit": "styles_transitionExit__1KmEf",
        "transitionExitActive": "styles_transitionExitActive__1nQXw",
      }
    }
    closeIconSize={28}
    closeIconSvgPath={
      <path
        d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
      />
    }
    closeOnEsc={true}
    closeOnOverlayClick={true}
    onClose={[Function]}
    onEntered={null}
    onEscKeyDown={null}
    onExited={null}
    onOverlayClick={null}
    open={false}
    showCloseIcon={true}
    styles={Object {}}
  >
    <br />
    <div
      className="modal-header"
    >
      <p
        className="justify l-r-pad-text"
      >
         You are about to delete 
      </p>
    </div>
    <div
      className="modal-contents"
      style={
        Object {
          "justifyContent": "center",
        }
      }
    >
      <img
        alt="meal"
        className="rounded-circle img-height"
        src=""
      />
    </div>
    <div
      className="modal-footer"
    >
      <button
        className="remove-modal delete-meal"
        onClick={[Function]}
      >
        Delete
      </button>
    </div>
  </Modal>
  <h2>
    All Meal Options
    meal created
  </h2>
  <h4
    className="p-color text-center"
  >
    Edit, delete or View all meal options
  </h4>
  <h2
    className="danger"
  />
  <div
    className="contents container allMeal"
    key="1"
  >
    <div
      className="content-wrap"
    >
      <div
        className="col-meal l-r-pad-text"
      >
        <img
          alt="meals"
          className="rounded-circle img-height"
        />
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
           Title
        </h4>
        <Link
          id="edit"
          replace={false}
          to="/admin/edit/1"
        >
          rice
        </Link>
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
          Price
        </h4>
        200
      </div>
      <div
        className="col-meal"
      >
        <br />
        <Link
          replace={false}
          to="/admin/edit/1"
        >
          <em
            className="fa fa-edit p-color"
          />
           Edit
        </Link>
        <br />
         
        <br />
        <span
          className="p-color delete"
          id="rice"
          onClick={[Function]}
          role="button"
        >
          <em
            className="fa fa-trash p-color"
          />
           Delete
        </span>
      </div>
    </div>
  </div>
  <div
    className="contents container allMeal"
    key="2"
  >
    <div
      className="content-wrap"
    >
      <div
        className="col-meal l-r-pad-text"
      >
        <img
          alt="meals"
          className="rounded-circle img-height"
        />
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
           Title
        </h4>
        <Link
          id="edit"
          replace={false}
          to="/admin/edit/2"
        >
          beans
        </Link>
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
          Price
        </h4>
        200
      </div>
      <div
        className="col-meal"
      >
        <br />
        <Link
          replace={false}
          to="/admin/edit/2"
        >
          <em
            className="fa fa-edit p-color"
          />
           Edit
        </Link>
        <br />
         
        <br />
        <span
          className="p-color delete"
          id="beans"
          onClick={[Function]}
          role="button"
        >
          <em
            className="fa fa-trash p-color"
          />
           Delete
        </span>
      </div>
    </div>
  </div>
  <div
    className="meal-pagination margin-bottom"
  >
    <a
      activePage={1}
      firstPageText="«"
      getPageUrl={[Function]}
      hideFirstLastPages={false}
      innerClass="pagination"
      itemsCountPerPage={6}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={4}
      prevPageText="⟨"
      totalItemsCount={NaN}
    />
  </div>
</div>
`;

exports[`Test Component of ALLMeals component should call deletMeal method onclick event 1`] = `
<div
  id="allmeal"
>
  <Modal
    animationDuration={500}
    center={true}
    classNames={Object {}}
    classes={
      Object {
        "closeButton": "styles_closeButton__20ID4",
        "closeIcon": "styles_closeIcon__1QwbI",
        "modal": "styles_modal__gNwvD",
        "overlay": "styles_overlay__CLSq-",
        "overlayCenter": "styles_overlayCenter__YHoO7",
        "transitionEnter": "styles_transitionEnter__3j_-a",
        "transitionEnterActive": "styles_transitionEnterActive___eQs7",
        "transitionExit": "styles_transitionExit__1KmEf",
        "transitionExitActive": "styles_transitionExitActive__1nQXw",
      }
    }
    closeIconSize={28}
    closeIconSvgPath={
      <path
        d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
      />
    }
    closeOnEsc={true}
    closeOnOverlayClick={true}
    onClose={[Function]}
    onEntered={null}
    onEscKeyDown={null}
    onExited={null}
    onOverlayClick={null}
    open={false}
    showCloseIcon={true}
    styles={Object {}}
  >
    <br />
    <div
      className="modal-header"
    >
      <p
        className="justify l-r-pad-text"
      >
         You are about to delete 
      </p>
    </div>
    <div
      className="modal-contents"
      style={
        Object {
          "justifyContent": "center",
        }
      }
    >
      <img
        alt="meal"
        className="rounded-circle img-height"
        src=""
      />
    </div>
    <div
      className="modal-footer"
    >
      <button
        className="remove-modal delete-meal"
        onClick={[Function]}
      >
        Delete
      </button>
    </div>
  </Modal>
  <h2>
    All Meal Options
    meal created
  </h2>
  <h4
    className="p-color text-center"
  >
    Edit, delete or View all meal options
  </h4>
  <h2
    className="danger"
  />
  <div
    className="contents container allMeal"
    key="1"
  >
    <div
      className="content-wrap"
    >
      <div
        className="col-meal l-r-pad-text"
      >
        <img
          alt="meals"
          className="rounded-circle img-height"
        />
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
           Title
        </h4>
        <Link
          id="edit"
          replace={false}
          to="/admin/edit/1"
        >
          rice
        </Link>
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
          Price
        </h4>
        200
      </div>
      <div
        className="col-meal"
      >
        <br />
        <Link
          replace={false}
          to="/admin/edit/1"
        >
          <em
            className="fa fa-edit p-color"
          />
           Edit
        </Link>
        <br />
         
        <br />
        <span
          className="p-color delete"
          id="rice"
          onClick={[Function]}
          role="button"
        >
          <em
            className="fa fa-trash p-color"
          />
           Delete
        </span>
      </div>
    </div>
  </div>
  <div
    className="contents container allMeal"
    key="2"
  >
    <div
      className="content-wrap"
    >
      <div
        className="col-meal l-r-pad-text"
      >
        <img
          alt="meals"
          className="rounded-circle img-height"
        />
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
           Title
        </h4>
        <Link
          id="edit"
          replace={false}
          to="/admin/edit/2"
        >
          beans
        </Link>
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
          Price
        </h4>
        200
      </div>
      <div
        className="col-meal"
      >
        <br />
        <Link
          replace={false}
          to="/admin/edit/2"
        >
          <em
            className="fa fa-edit p-color"
          />
           Edit
        </Link>
        <br />
         
        <br />
        <span
          className="p-color delete"
          id="beans"
          onClick={[Function]}
          role="button"
        >
          <em
            className="fa fa-trash p-color"
          />
           Delete
        </span>
      </div>
    </div>
  </div>
  <div
    className="meal-pagination margin-bottom"
  >
    <a
      activePage={1}
      firstPageText="«"
      getPageUrl={[Function]}
      hideFirstLastPages={false}
      innerClass="pagination"
      itemsCountPerPage={6}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={4}
      prevPageText="⟨"
      totalItemsCount={NaN}
    />
  </div>
</div>
`;

exports[`Test Component of ALLMeals component should cancel/remove modal that delete meal using cancelAdd method 1`] = `undefined`;

exports[`Test Component of ALLMeals component should respond to a click event by dispalying a modal when caterer want to delete a meal by selecting from meal options 1`] = `
<div
  id="allmeal"
>
  <Modal
    animationDuration={500}
    center={true}
    classNames={Object {}}
    classes={
      Object {
        "closeButton": "styles_closeButton__20ID4",
        "closeIcon": "styles_closeIcon__1QwbI",
        "modal": "styles_modal__gNwvD",
        "overlay": "styles_overlay__CLSq-",
        "overlayCenter": "styles_overlayCenter__YHoO7",
        "transitionEnter": "styles_transitionEnter__3j_-a",
        "transitionEnterActive": "styles_transitionEnterActive___eQs7",
        "transitionExit": "styles_transitionExit__1KmEf",
        "transitionExitActive": "styles_transitionExitActive__1nQXw",
      }
    }
    closeIconSize={28}
    closeIconSvgPath={
      <path
        d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
      />
    }
    closeOnEsc={true}
    closeOnOverlayClick={true}
    onClose={[Function]}
    onEntered={null}
    onEscKeyDown={null}
    onExited={null}
    onOverlayClick={null}
    open={true}
    showCloseIcon={true}
    styles={Object {}}
  >
    <br />
    <div
      className="modal-header"
    >
      <p
        className="justify l-r-pad-text"
      >
         You are about to delete 
        rice
      </p>
    </div>
    <div
      className="modal-contents"
      style={
        Object {
          "justifyContent": "center",
        }
      }
    >
      <img
        alt="meal"
        className="rounded-circle img-height"
      />
    </div>
    <div
      className="modal-footer"
    >
      <button
        className="remove-modal delete-meal"
        onClick={[Function]}
      >
        Delete
      </button>
    </div>
  </Modal>
  <h2>
    All Meal Options
    meal created
  </h2>
  <h4
    className="p-color text-center"
  >
    Edit, delete or View all meal options
  </h4>
  <h2
    className="danger"
  />
  <div
    className="contents container allMeal"
    key="1"
  >
    <div
      className="content-wrap"
    >
      <div
        className="col-meal l-r-pad-text"
      >
        <img
          alt="meals"
          className="rounded-circle img-height"
        />
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
           Title
        </h4>
        <Link
          id="edit"
          replace={false}
          to="/admin/edit/1"
        >
          rice
        </Link>
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
          Price
        </h4>
        200
      </div>
      <div
        className="col-meal"
      >
        <br />
        <Link
          replace={false}
          to="/admin/edit/1"
        >
          <em
            className="fa fa-edit p-color"
          />
           Edit
        </Link>
        <br />
         
        <br />
        <span
          className="p-color delete"
          id="rice"
          onClick={[Function]}
          role="button"
        >
          <em
            className="fa fa-trash p-color"
          />
           Delete
        </span>
      </div>
    </div>
  </div>
  <div
    className="contents container allMeal"
    key="2"
  >
    <div
      className="content-wrap"
    >
      <div
        className="col-meal l-r-pad-text"
      >
        <img
          alt="meals"
          className="rounded-circle img-height"
        />
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
           Title
        </h4>
        <Link
          id="edit"
          replace={false}
          to="/admin/edit/2"
        >
          beans
        </Link>
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
          Price
        </h4>
        200
      </div>
      <div
        className="col-meal"
      >
        <br />
        <Link
          replace={false}
          to="/admin/edit/2"
        >
          <em
            className="fa fa-edit p-color"
          />
           Edit
        </Link>
        <br />
         
        <br />
        <span
          className="p-color delete"
          id="beans"
          onClick={[Function]}
          role="button"
        >
          <em
            className="fa fa-trash p-color"
          />
           Delete
        </span>
      </div>
    </div>
  </div>
  <div
    className="meal-pagination margin-bottom"
  >
    <a
      activePage={1}
      firstPageText="«"
      getPageUrl={[Function]}
      hideFirstLastPages={false}
      innerClass="pagination"
      itemsCountPerPage={6}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={4}
      prevPageText="⟨"
      totalItemsCount={NaN}
    />
  </div>
</div>
`;

exports[`Test Component of ALLMeals component should respond to deleteMeal method  1`] = `
<div
  id="allmeal"
>
  <Modal
    animationDuration={500}
    center={true}
    classNames={Object {}}
    classes={
      Object {
        "closeButton": "styles_closeButton__20ID4",
        "closeIcon": "styles_closeIcon__1QwbI",
        "modal": "styles_modal__gNwvD",
        "overlay": "styles_overlay__CLSq-",
        "overlayCenter": "styles_overlayCenter__YHoO7",
        "transitionEnter": "styles_transitionEnter__3j_-a",
        "transitionEnterActive": "styles_transitionEnterActive___eQs7",
        "transitionExit": "styles_transitionExit__1KmEf",
        "transitionExitActive": "styles_transitionExitActive__1nQXw",
      }
    }
    closeIconSize={28}
    closeIconSvgPath={
      <path
        d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
      />
    }
    closeOnEsc={true}
    closeOnOverlayClick={true}
    onClose={[Function]}
    onEntered={null}
    onEscKeyDown={null}
    onExited={null}
    onOverlayClick={null}
    open={false}
    showCloseIcon={true}
    styles={Object {}}
  >
    <br />
    <div
      className="modal-header"
    >
      <p
        className="justify l-r-pad-text"
      >
         You are about to delete 
      </p>
    </div>
    <div
      className="modal-contents"
      style={
        Object {
          "justifyContent": "center",
        }
      }
    >
      <img
        alt="meal"
        className="rounded-circle img-height"
        src=""
      />
    </div>
    <div
      className="modal-footer"
    >
      <button
        className="remove-modal delete-meal"
        onClick={[Function]}
      >
        Delete
      </button>
    </div>
  </Modal>
  <h2>
    All Meal Options
    meal created
  </h2>
  <h4
    className="p-color text-center"
  >
    Edit, delete or View all meal options
  </h4>
  <h2
    className="danger"
  />
  <div
    className="contents container allMeal"
    key="1"
  >
    <div
      className="content-wrap"
    >
      <div
        className="col-meal l-r-pad-text"
      >
        <img
          alt="meals"
          className="rounded-circle img-height"
        />
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
           Title
        </h4>
        <Link
          id="edit"
          replace={false}
          to="/admin/edit/1"
        >
          rice
        </Link>
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
          Price
        </h4>
        200
      </div>
      <div
        className="col-meal"
      >
        <br />
        <Link
          replace={false}
          to="/admin/edit/1"
        >
          <em
            className="fa fa-edit p-color"
          />
           Edit
        </Link>
        <br />
         
        <br />
        <span
          className="p-color delete"
          id="rice"
          onClick={[Function]}
          role="button"
        >
          <em
            className="fa fa-trash p-color"
          />
           Delete
        </span>
      </div>
    </div>
  </div>
  <div
    className="contents container allMeal"
    key="2"
  >
    <div
      className="content-wrap"
    >
      <div
        className="col-meal l-r-pad-text"
      >
        <img
          alt="meals"
          className="rounded-circle img-height"
        />
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
           Title
        </h4>
        <Link
          id="edit"
          replace={false}
          to="/admin/edit/2"
        >
          beans
        </Link>
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
          Price
        </h4>
        200
      </div>
      <div
        className="col-meal"
      >
        <br />
        <Link
          replace={false}
          to="/admin/edit/2"
        >
          <em
            className="fa fa-edit p-color"
          />
           Edit
        </Link>
        <br />
         
        <br />
        <span
          className="p-color delete"
          id="beans"
          onClick={[Function]}
          role="button"
        >
          <em
            className="fa fa-trash p-color"
          />
           Delete
        </span>
      </div>
    </div>
  </div>
  <div
    className="meal-pagination margin-bottom"
  >
    <a
      activePage={1}
      firstPageText="«"
      getPageUrl={[Function]}
      hideFirstLastPages={false}
      innerClass="pagination"
      itemsCountPerPage={6}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={4}
      prevPageText="⟨"
      totalItemsCount={NaN}
    />
  </div>
</div>
`;

exports[`Test Component of ALLMeals component should respond to deleteMeal method 1`] = `
<div
  id="allmeal"
>
  <Modal
    animationDuration={500}
    center={true}
    classNames={Object {}}
    classes={
      Object {
        "closeButton": "styles_closeButton__20ID4",
        "closeIcon": "styles_closeIcon__1QwbI",
        "modal": "styles_modal__gNwvD",
        "overlay": "styles_overlay__CLSq-",
        "overlayCenter": "styles_overlayCenter__YHoO7",
        "transitionEnter": "styles_transitionEnter__3j_-a",
        "transitionEnterActive": "styles_transitionEnterActive___eQs7",
        "transitionExit": "styles_transitionExit__1KmEf",
        "transitionExitActive": "styles_transitionExitActive__1nQXw",
      }
    }
    closeIconSize={28}
    closeIconSvgPath={
      <path
        d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
      />
    }
    closeOnEsc={true}
    closeOnOverlayClick={true}
    onClose={[Function]}
    onEntered={null}
    onEscKeyDown={null}
    onExited={null}
    onOverlayClick={null}
    open={false}
    showCloseIcon={true}
    styles={Object {}}
  >
    <br />
    <div
      className="modal-header"
    >
      <p
        className="justify l-r-pad-text"
      >
         You are about to delete 
      </p>
    </div>
    <div
      className="modal-contents"
      style={
        Object {
          "justifyContent": "center",
        }
      }
    >
      <img
        alt="meal"
        className="rounded-circle img-height"
        src=""
      />
    </div>
    <div
      className="modal-footer"
    >
      <button
        className="remove-modal delete-meal"
        onClick={[Function]}
      >
        Delete
      </button>
    </div>
  </Modal>
  <h2>
    All Meal Options
    meal created
  </h2>
  <h4
    className="p-color text-center"
  >
    Edit, delete or View all meal options
  </h4>
  <h2
    className="danger"
  />
  <div
    className="contents container allMeal"
    key="1"
  >
    <div
      className="content-wrap"
    >
      <div
        className="col-meal l-r-pad-text"
      >
        <img
          alt="meals"
          className="rounded-circle img-height"
        />
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
           Title
        </h4>
        <Link
          id="edit"
          replace={false}
          to="/admin/edit/1"
        >
          rice
        </Link>
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
          Price
        </h4>
        200
      </div>
      <div
        className="col-meal"
      >
        <br />
        <Link
          replace={false}
          to="/admin/edit/1"
        >
          <em
            className="fa fa-edit p-color"
          />
           Edit
        </Link>
        <br />
         
        <br />
        <span
          className="p-color delete"
          id="rice"
          onClick={[Function]}
          role="button"
        >
          <em
            className="fa fa-trash p-color"
          />
           Delete
        </span>
      </div>
    </div>
  </div>
  <div
    className="contents container allMeal"
    key="2"
  >
    <div
      className="content-wrap"
    >
      <div
        className="col-meal l-r-pad-text"
      >
        <img
          alt="meals"
          className="rounded-circle img-height"
        />
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
           Title
        </h4>
        <Link
          id="edit"
          replace={false}
          to="/admin/edit/2"
        >
          beans
        </Link>
      </div>
      <div
        className="col-meal"
      >
        <h4
          className="p-color"
        >
          Price
        </h4>
        200
      </div>
      <div
        className="col-meal"
      >
        <br />
        <Link
          replace={false}
          to="/admin/edit/2"
        >
          <em
            className="fa fa-edit p-color"
          />
           Edit
        </Link>
        <br />
         
        <br />
        <span
          className="p-color delete"
          id="beans"
          onClick={[Function]}
          role="button"
        >
          <em
            className="fa fa-trash p-color"
          />
           Delete
        </span>
      </div>
    </div>
  </div>
  <div
    className="meal-pagination margin-bottom"
  >
    <a
      activePage={1}
      firstPageText="«"
      getPageUrl={[Function]}
      hideFirstLastPages={false}
      innerClass="pagination"
      itemsCountPerPage={6}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={4}
      prevPageText="⟨"
      totalItemsCount={NaN}
    />
  </div>
</div>
`;

exports[`Test Component of ALLMeals component should respond to mapDispatchToProps methods 1`] = `
Object {
  "mealActions": Object {
    "createMeal": [Function],
    "deleteMeal": [Function],
    "getAllMeals": [Function],
    "loadAllMeals": [Function],
    "loadErrorMessage": [Function],
    "loadMostOrdered": [Function],
    "loadMostOrderedMeal": [Function],
    "loadSuccessMessage": [Function],
    "updateMeal": [Function],
  },
}
`;

exports[`Test Component of ALLMeals component should respond to mapStateToProps methods 1`] = `
Object {
  "meals": Object {
    "rows": Array [
      Object {
        "descrption": "Very delicious",
        "id": 1,
        "name": "rice",
        "price": "200",
      },
      Object {
        "descrption": "Very delicious",
        "id": 2,
        "name": "beans",
        "price": "200",
      },
    ],
  },
  "successMessage": Object {
    "createMealSuccess": "meal created",
  },
}
`;
